--- a/src/components/common/Discover/index.astro
+++ b/src/components/common/Discover/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 
 export interface Props {
   title: string;
@@ -14,6 +15,42 @@ export interface Props {
 }
 
 const { title, images } = Astro.props;
+
+// Instagram posts con sus imágenes de fallback
+const instagramPosts = [
+  {
+    id: 'post1',
+    postUrl: 'https://www.instagram.com/reel/DPCEX3gETX7/',
+    embedUrl: 'https://www.instagram.com/reel/DPCEX3gETX7/embed',
+    imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-1.jpg',
+    fallbackImage: '/images/instagram-fallback-1.jpg',
+    alt: 'Yummi Nuts Instagram Post 1'
+  },
+  {
+    id: 'post2',
+    postUrl: 'https://www.instagram.com/reel/DPM7DcDEb1N/',
+    embedUrl: 'https://www.instagram.com/reel/DPM7DcDEb1N/embed',
+    imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-2.jpg',
+    fallbackImage: '/images/instagram-fallback-2.jpg',
+    alt: 'Yummi Nuts Instagram Post 2'
+  },
+  {
+    id: 'post3',
+    postUrl: 'https://www.instagram.com/reel/DPP-dSREWWZ/',
+    embedUrl: 'https://www.instagram.com/reel/DPP-dSREWWZ/embed',
+    imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-3.jpg',
+    fallbackImage: '/images/instagram-fallback-3.jpg',
+    alt: 'Yummi Nuts Instagram Post 3'
+  },
+  {
+    id: 'post4',
+    postUrl: 'https://www.instagram.com/reel/DPQAa8PDZyh/',
+    embedUrl: 'https://www.instagram.com/reel/DPQAa8PDZyh/embed',
+    imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-4.jpg',
+    fallbackImage: '/images/instagram-fallback-4.jpg',
+    alt: 'Yummi Nuts Instagram Post 4'
+  },
+];
 ---
 
 <div class="box-border flex flex-col gap-12 items-left justify-start container mx-auto  py-0 relative w-full bg-white">
@@ -33,7 +70,7 @@ const { title, images } = Astro.props;
     </div>
     <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
       <iframe
-        src="https://www.instagram.com/reel/DPP-dSREWWZ/embed"
+        src="https://www.instagram.com/reel/DPM7DcDEb1N//embed"
         class="w-full h-full"
         allowtransparency="true"
         allowfullscreen
@@ -53,7 +90,7 @@ const { title, images } = Astro.props;
     </div>
     <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
       <iframe
-        src="https://www.instagram.com/reel/DPCEX3gETX7/embed"
+        src="https://www.instagram.com/reel/DPQAa8PDZyh/embed"
         class="w-full h-full"
         allowtransparency="true"
         allowfullscreen
